added credibility model

--- a/src/config.json
+++ b/src/config.json
@@ -25,6 +25,14 @@
       "subsample": 0.8,
       "colsample_bytree": 0.8,
       "random_state": 42
+    },
+    "credibility": {
+      "n_estimators": 300,
+      "max_depth": 6,
+      "learning_rate": 0.1,
+      "subsample": 0.8,
+      "colsample_bytree": 0.8,
+      "random_state": 42
     }
   }
 }
