--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ seaborn>=0.12.2
 spacy==3.7.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
 lxml_html_clean>=0.1.0
+google
+google-genai
+python-dotenv 
