--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,11 @@ chromadb==0.4.24
 beautifulsoup4==4.12.2
 requests==2.31.0
 spacy==3.7.2
+en-core-web-sm==3.7.1
 matplotlib==3.7.2
 seaborn==0.12.2
 lxml_html_clean==0.1.0
 google-genai
 python-dotenv
 flask
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
 torch
